version/0.19/_sources/api/general/_autosummary/ansys.fluent.core.workflow.ConditionalTask.rst.txt
ansys.fluent.core.workflow.ConditionalTask
==========================================

.. currentmodule:: ansys.fluent.core.workflow

.. autoclass:: ConditionalTask

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      ~ConditionalTask.__init__
      ~ConditionalTask.child_task_python_names
      ~ConditionalTask.delete
      ~ConditionalTask.display_name
      ~ConditionalTask.get_direct_downstream_tasks
      ~ConditionalTask.get_direct_upstream_tasks
      ~ConditionalTask.get_id
      ~ConditionalTask.get_idx
      ~ConditionalTask.inactive_ordered_children
      ~ConditionalTask.ordered_children
      ~ConditionalTask.python_name
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~ConditionalTask.CommandArguments
      ~ConditionalTask.arguments
   
   