version/0.20/_sources/api/general/_autosummary/ansys.fluent.core.workflow.ConditionalTask.rst.txt
ansys.fluent.core.workflow.ConditionalTask
==========================================

.. currentmodule:: ansys.fluent.core.workflow

.. autoclass:: ConditionalTask

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      ~ConditionalTask.__init__
      ~ConditionalTask.add_child_to_task
      ~ConditionalTask.child_task_python_names
      ~ConditionalTask.delete
      ~ConditionalTask.display_name
      ~ConditionalTask.get_direct_downstream_tasks
      ~ConditionalTask.get_direct_upstream_tasks
      ~ConditionalTask.get_id
      ~ConditionalTask.get_idx
      ~ConditionalTask.get_next_possible_tasks
      ~ConditionalTask.inactive_ordered_children
      ~ConditionalTask.insert_compound_child_task
      ~ConditionalTask.insert_next_task
      ~ConditionalTask.ordered_children
      ~ConditionalTask.python_name
      ~ConditionalTask.rename
      ~ConditionalTask.update_child_tasks
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~ConditionalTask.arguments
      ~ConditionalTask.command_arguments
   
   